Plugin Name: Custom Sidebars Pro
Author: Javier Marquez (Incsub), Philipp Stracker (Incsub), Marcin Pietrzak (Incsub)
Buildtime: BUILDTIME

Change Log:
----------------------------------------------------------------------

3.1.3 ( 2018-xx-xx )
----------------------------------------------------------------------
- Load JavaScript templates only on widgets page.

3.1.2 ( 2018-02-09 )
----------------------------------------------------------------------
- Added integration with Polylang - now you can choose sidebar to depend on Polylang language.
- Added integration with WPML - now you can choose sidebar to depend on WPML language.
- Added check to avoid warning when a user deletes term which is assigned to "Sidebar Location".
- Updated "WPMU Dev code library" to version 3.0.5.

3.1.1 ( 2017-11-07 )
----------------------------------------------------------------------
- Improved assets directories.
- Improved widgets on very small screens.
- Fixed bulk edit problem with resetting sidebars.
- Fixed few notices on import screen.

3.1.0 ( 2017-10-04 )
----------------------------------------------------------------------
- Added a quick and a bulk edit to custom post types.
- Added nonce check for set location, import & export actions to avoid CSRF vulnerability.
- Fixed a problem with getting sidebars settings for nested pages with more than 2 levels.
- Fixed a problem with widget visibility on taxonomy archive page.
- Fixed a typo on Import/Export screen.

3.0.9 ( 2017-07-03 )
----------------------------------------------------------------------
- Added ability to turn off "Custom Sidebars" for certain roles.
- Fixed a problem with a category, category archive, and post in category replacement.
- Fixed a problem with removed "Category Archive" from "For Archives" options.
- Fixed build in taxonomies problem on "Sidebar Location" edit window.

3.0.8.1 ( 2017-06-29 )
----------------------------------------------------------------------