@@ -1,4 +1,4 @@
-/*! Custom Sidebars - v3.1.2
+/*! Custom Sidebars - v3.1.3-beta.1
  * https://premium.wpmudev.org/project/custom-sidebars-pro/
  * Copyright (c) 2018; * Licensed GPLv2+ */
 /*global jQuery:false */
