@@ -8,6 +8,7 @@ Change Log:
 3.1.3 ( 2018-xx-xx )
 ----------------------------------------------------------------------
 - Load JavaScript templates only on widgets page.
+- Improved custom sidebar edit modal, now it remembers "Advenced Edit" status.
 
 3.1.2 ( 2018-02-09 )
 ----------------------------------------------------------------------
